--- a/src/views/shop.ejs
+++ b/src/views/shop.ejs
@@ -100,6 +100,9 @@
                                                 <%= product.price %>$
                                             </span>
                                     </div>
+                                    <div style="margin-top:9px">
+                                        <span>Số Lượng: <%= product.stock %></span>
+                                    </div>
                                     <div class="product-rating">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
