--- a/src/views/admin/productManager.ejs
+++ b/src/views/admin/productManager.ejs
@@ -47,7 +47,18 @@
     <meta property="og:image:type" content="image/png">
 
 
-
+    <style>
+        .product-title {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            /* số dòng tối đa muốn hiển thị, đổi thành 3 nếu cần */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: normal;
+            max-width: 50%;
+        }
+    </style>
 
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141734189-6"></script>
@@ -381,11 +392,13 @@
                                                             src="<%= product.images[0].url %>"
                                                             alt="<%= product.name %>">
                                                         <div class="text-sm font-normal text-gray-500">
-                                                            <div class="text-base font-semibold text-gray-900">
+                                                            <div
+                                                                class="product-title text-base font-semibold text-gray-900">
                                                                 <%= product.name %>
                                                             </div>
-                                                            <div class="text-sm font-normal text-gray-500">
-                                                                <%= product.description %>
+                                                            <div
+                                                                class="product-title text-sm font-normal text-gray-500">
+                                                                <%= product.details.description %>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -461,7 +474,9 @@
                         </a>
                         <span class="text-sm font-normal text-gray-500">Showing <span
                                 class="text-gray-900 font-semibold">1-20</span> of <span
-                                class="text-gray-900 font-semibold">2290</span></span>
+                                class="text-gray-900 font-semibold">
+                                <%= countProducts %>
+                            </span></span>
                     </div>
                     <div class="flex items-center space-x-3">
                         <a href="#"
