--- a/src/views/admin/userList.ejs
+++ b/src/views/admin/userList.ejs
@@ -462,7 +462,9 @@
                         </a>
                         <span class="text-sm font-normal text-gray-500">Showing <span
                                 class="text-gray-900 font-semibold">1-20</span> of <span
-                                class="text-gray-900 font-semibold">2290</span></span>
+                                class="text-gray-900 font-semibold">
+                                <%= countUsers %>
+                            </span></span>
                     </div>
                     <div class="flex items-center space-x-3">
                         <a href="#"
