--- a/src/views/shop.ejs
+++ b/src/views/shop.ejs
@@ -2,7 +2,7 @@
 <!-- Shop Content -->
 <div class="container">
     <div class="breadcrumb">
-        <a href="index.html">Home</a> / <span>Shop</span>
+        <a href="/">Home</a> / <span>Shop</span>
     </div>
 
     <div class="shop-content">
