--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -102,7 +102,8 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary checkout-btn">Process to checkout</button>
+            <button class="btn btn-primary checkout-btn"><a href="/checkout/<%= existingUser._id %>">Process to
+                    checkout</a></button>
         </div>
     </div>
 </div>
@@ -240,11 +241,11 @@
             }
         });
 
-        // Checkout button
-        const checkoutBtn = document.querySelector('.checkout-btn');
-        checkoutBtn.addEventListener('click', function () {
-            alert('Proceeding to checkout...');
-            // Redirect to checkout page would go here
-        });
+        // // Checkout button
+        // const checkoutBtn = document.querySelector('.checkout-btn');
+        // checkoutBtn.addEventListener('click', function () {
+        //     alert('Proceeding to checkout...');
+        //     // Redirect to checkout page would go here
+        // });
     });
 </script>
