--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,9 +8,9 @@
         <div class="nav-links">
             <a href="/">Home</a>
             <a href="#">Contact</a>
-            <a href="#">About</a>
             <% if (typeof existingUser !=="undefined" && existingUser) { %>
                 <a>Xin chào, <%= existingUser.name %>!</a>
+                <a href="/user-orders/<%= existingUser._id %>">Đơn Hàng Của Tôi</a>
                 <form action="/auth/logout" method="POST"><button type="submit"><a>Đăng xuất</a></button></form>
                 <% } else { %>
                     <a href="/auth/login">Đăng nhập</a>
