--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -102,8 +102,8 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary checkout-btn"><a href="/checkout/<%= existingUser._id %>">Process to
-                    checkout</a></button>
+            <button data-userId="<%= existingUser._id %>" class="btn btn-primary checkout-btn">Process to
+                checkout</button>
         </div>
     </div>
 </div>
@@ -175,7 +175,6 @@
             const subtotalElement = document.querySelector('.cart-totals .total-row:first-child span:last-child');
             const totalElement = document.querySelector('.cart-totals .total-row.final span:last-child');
 
-            // Simple calculation for demo
             let subtotal = 0;
             document.querySelectorAll('.cart-table tbody tr').forEach(row => {
                 const price = parseFloat(row.querySelector('td:nth-child(2)').textContent.replace('$', ''));
@@ -213,11 +212,7 @@
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ quantity })
             }).then(res => res.json())
-                .then(data => {
-                    if (data.success) {
-                        alert("Xóa Thành Công");
-                    }
-                }).catch(err => {
+                .catch(err => {
                     console.log("Lỗi Khi Xóa Khỏi Cart: ", err);
                 })
         }
@@ -241,11 +236,12 @@
             }
         });
 
-        // // Checkout button
-        // const checkoutBtn = document.querySelector('.checkout-btn');
-        // checkoutBtn.addEventListener('click', function () {
-        //     alert('Proceeding to checkout...');
-        //     // Redirect to checkout page would go here
-        // });
+        // Checkout button
+        const checkoutBtn = document.querySelector('.checkout-btn');
+        checkoutBtn.addEventListener('click', function () {
+            // Redirect to checkout page would go here
+            window.location.href = '/checkout/' + checkoutBtn.dataset.userId;
+
+        });
     });
 </script>
