--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -175,6 +175,18 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="/admin/orders-list"
+                                    class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
+                                    <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition
+                                        duration-75" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+                                        <path
+                                            d="M465.4 192L431.1 144L209 144L174.7 192L465.4 192zM96 212.5C96 199.2 100.2 186.2 107.9 175.3L156.9 106.8C168.9 90 188.3 80 208.9 80L431 80C451.7 80 471.1 90 483.1 106.8L532 175.3C539.8 186.2 543.9 199.2 543.9 212.5L544 480C544 515.3 515.3 544 480 544L160 544C124.7 544 96 515.3 96 480L96 212.5z" />
+                                    </svg>
+                                    <span class="ml-3 flex-1"><i class="fa-solid fa-truck-fast"></i>Orders
+                                        Manager</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/"
                                     class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                                     <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"
