--- a/src/views/productDetails.ejs
+++ b/src/views/productDetails.ejs
@@ -86,7 +86,7 @@
                 <% if(getProducts.stock===0) { %>
                     <span style="color: #f02323;">Sold Out</span>
                     <% } else { %>
-                        <span style="color: #00FF66;">In Stock</span>
+                        <h2 style="color: #00FF66;">In Stock</h2>
                         <% } %>
             </div>
             <div class="product-price-details">$<%= finalPrice %>
