update-brand-filter

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="top-bar">
-    <p>Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%! <a href="#"
+    <p>Summer Sale For All Mainboards Suits And Free Express Delivery - Up to 91%! <a href="/shop-page/Mainboards"
             style="color: #fff; text-decoration: underline;">Shop Now</a></p>
 </div>
 <div class="container">
