--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,31 +1,26 @@
 <div class="container">
     <div class="footer-content">
-        <div class="footer-column">
-            <h3>Exclusive</h3>
-            <div class="subscribe-form">
-                <input type="email" placeholder="Enter your email">
-                <button><i class="fas fa-paper-plane"></i></button>
-            </div>
-            <p>Get 10% off your first order</p>
-        </div>
+
 
         <div class="footer-column">
             <h3>Support</h3>
             <ul>
-                <li>11 Bijoy sarani, Dhaka, DH 1515, Bangladesh</li>
-                <li>exclusive@gmail.com</li>
-                <li>+88015-88888-9999</li>
+                <li>Long Biên Hà Nội Việt Nam</li>
+                <li>quanganh2004dasuo@gmail.com</li>
+                <li>+84 353554244</li>
             </ul>
         </div>
 
         <div class="footer-column">
             <h3>Account</h3>
             <ul>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">Login / Register</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="/user">My Account</a></li>
+                <% if(existingUser){ %>
+                    <li><a href="/cart/<%= existingUser._id %>">Cart</a></li>
+                    <%} else { %>
+                        <li><a href="/auth/login">Login or Register</a></li>
+                        <% } %>
+                            <li><a href="#">Shop</a></li>
             </ul>
         </div>
 
